--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.14.3
   flutter_svg: ^2.0.17
+  shared_preferences: ^2.5.1
 
 dev_dependencies:
 
