--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.3
+  flutter_localizations:
+    sdk: flutter
   flutter_svg: ^2.0.17
   shared_preferences: ^2.5.1
 
