--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   dots_indicator: ^3.0.0
+  firebase_core: ^3.10.1
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.3
