--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_core: ^3.10.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.0.0
   flutter_launcher_icons: ^0.14.3
   flutter_localizations:
     sdk: flutter
