--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.17
+  get_it: ^8.0.3
   shared_preferences: ^2.5.1
 
 dev_dependencies:
