--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  flutter_facebook_auth: ^7.1.1
   flutter_launcher_icons: ^0.14.3
   flutter_localizations:
     sdk: flutter
