--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_sign_in: ^6.2.2
   modal_progress_hud_nsn: ^0.5.1
   shared_preferences: ^2.5.1
+  skeletonizer: ^1.4.3
 
 dev_dependencies:
 
