--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   flutter_localizations:
     sdk: flutter
+  flutter_paypal_payment: ^1.0.8
   flutter_svg: ^2.0.17
   flutter_svg_provider: ^1.0.7
   get_it: ^8.0.3
